@@ -32,20 +32,15 @@ catalog: catalog-java catalog-resources catalog-rmi
 ifneq "$(JAVA_FILES)" ""
 
 catalog-java: $(wildcard $(JAVA_FILES))
-	@for match in $? ; do  \
-		$(ECHO) "$(MOD_SOURCE_DIR_PREFIX)$(MOD_PACKAGE_DIR)$(SLASH)$$match" \
-			>> $(MOD_JAVA_CATALOG) ; \
-	done
-
+	@$(ECHO) $(addprefix $(MOD_SOURCE_DIR_PREFIX)$(MOD_PACKAGE_DIR)$(SLASH), $?) \
+		>> $(MOD_JAVA_CATALOG)
 endif
 
 ifneq "$(RESOURCE_FILES)" ""
 
 catalog-resources: $(wildcard $(RESOURCE_FILES))
-	@for match in $? ; do \
-		$(ECHO) "$(MOD_SOURCE_DIR_PREFIX)$(MOD_PACKAGE_DIR)$(SLASH)$$match" \
-			>> $(MOD_RESOURCE_CATALOG) ; \
-	done
+	@$(ECHO) $(addprefix $(MOD_SOURCE_DIR_PREFIX)$(MOD_PACKAGE_DIR)$(SLASH), $?) \
+			>> $(MOD_RESOURCE_CATALOG)
 	
 endif
 
