@@ -1,3 +1,8 @@
+* Sep 25 2000 hship
+
+Speed up writing of catalog entries by using $(addprefix) to generate a single long line
+(the old way invoked echo.exe a zillion times).
+
 * Sep 24 2000 hship
 
 Attempt to speed up the build a little, by including the relative
